[package]
name = "pict"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]

[dependencies]
winit = {path = "c:/dev/rs/winit"}
log = "0.4.3"
env_logger = "0.5.10"

winapi = {version = "0.3.5", features = ["winuser", "windef", "commctrl"]}
toml = "0.4.6"
serde = "1.0.70"
serde_derive = "1.0.70"
